--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,3 +15,31 @@ body{
     color: v.$white;
     transition: all .4s ease-in-out;
 }
+
+a{
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+    font-family: inherit;
+
+}
+header{
+    height: 100vh;
+    color: v.$white;
+    overflow: hidden;
+}
+
+section{
+    min-height: 100vh;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 3rem 18rem;
+}
+
+.section {
+    transform: translateY(-100%);
+    transition: all .4s ease-in-out;
+    background-color: v.$primary-color;
+}
