--- a/src/scss/aboutSec/_about.scss
+++ b/src/scss/aboutSec/_about.scss
@@ -1,5 +1,80 @@
+@use '../variables/variables' as v;
+
 .sec2{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(0, 51, 255);
+}
+
+.main-title{
+    text-align: center;
+    h2{
+        position: relative;
+        text-transform: uppercase;
+        font-size: 4rem;
+        font-weight: 700;
+        span{
+            color: v.$secundary-color;
+        }
+        .bg-text{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            font-weight: 800;
+            color: v.$grey-5;
+            transition: all .4s ease-in-out;
+            z-index: -1;
+            transform: translate(-50%, -50%);
+            font-size: 6.2rem;
+        }
+    }
+}
+
+.about-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-top: 3.5rem;
+    padding-bottom: 5rem;
+    .rigth-about{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .about-item{
+            border: 1px solid v.$grey-5;
+            border-radius: 5px;
+            transition: all .4s ease-in-out;
+            box-shadow: 1px 2px 15px rgba(0,0,0,.1);
+            &:hover{
+                cursor: default;
+                transform: translateY(-5px);
+                border: 1px solid v.$secundary-color;
+                box-shadow: 1px 4px  15px rgba(0,0,0,.32);
+            }
+            .abt-text{
+                padding: 1.5rem;
+                display: flex;
+                flex-direction: column;
+                .large-text{
+                    font-size: 3rem;
+                    font-weight: 700;
+                    color: v.$secundary-color;
+                }
+                .small-text{
+                    padding-left: 3rem;
+                    position: relative;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    letter-spacing: 2px;
+                    &::before{
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        top: 1rem;
+                        width: 2rem;
+                        height: 2px;
+                        background-color: v.$grey-5;
+                    }
+                }
+            }
+        }
+    }
 }
