--- a/src/scss/aboutSec/_about.scss
+++ b/src/scss/aboutSec/_about.scss
@@ -87,7 +87,49 @@
         h4{
             font-size: 4rem;
             text-transform: uppercase;
-            
+
+        }
+    }
+}
+
+// about stats
+
+.about-stats{
+    padding-bottom: 4rem;
+    .progress-bars{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 2rem;
+        .progress-bar{
+            display: flex;
+            flex-direction: column;
+            .prog-title{
+                text-transform: uppercase;
+                font-weight: 500;
+            }
+            .progress-con{
+                display: flex;
+                align-items: center;
+                .prog-text{
+                    color: v.$grey-2;
+                }
+                .progres{
+                    width: 100%;
+                    height: .45rem;
+                    background-color: v.$grey-4;
+                    margin-left: 1rem;
+                    position: relative;
+                    span{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 100%;
+                        background-color: v.$secundary-color;
+                        transition: all .4s ease-in-out;
+                        width: 90%;
+                    }
+                }
+            }
         }
     }
 }
