--- a/src/scss/portfolioSec/_portfolio.scss
+++ b/src/scss/portfolioSec/_portfolio.scss
@@ -1,5 +1,84 @@
+@use '../variables/variables' as v;
+
 .sec3{
     display: none;
     transform: translateY(0) scale(1);
-    background-color: rgb(165, 42, 42);
+}
+
+.port-text{
+    padding: 2rem 0;
+    text-align: center;
+}
+
+.portfolios{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2rem;
+    margin-top: 3rem;
+    .portfolio-item{
+        border-radius: 15px;
+        position: relative;
+        img{
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 15px;
+        }
+        .hover-items{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            border-radius: 15px;
+            width: 100%;
+            height: 100%;
+            background-color: v.$secundary-color;
+            position: absolute;
+            left: 0;
+            top: 0;
+            opacity: 0;
+            transform: scale(0);
+            transition: all .4s ease-in-out;
+            h3{
+                margin-bottom: 1.5rem;
+                font-size: 1.5rem;
+                color: v.$white;            
+            }
+            .icons{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .icon{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin: 0 1rem;
+                    width: 50px;
+                    height: 50px;
+                    background-color: v.$primary-color;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    transition: all .4s ease-in-out;
+                    i{
+                        margin: 0 1rem;
+                        font-size: 1.5rem;
+                        color: v.$white;
+                    }
+                    &:hover{
+                        background-color: v.$white;
+                        i{
+                            color: v.$primary-color;
+                        }
+                    }
+                    
+                }
+                
+            }
+        }
+    }
+}
+
+.portfolio-item:hover .hover-items{
+    opacity: 1;
+    transform: scale(1);
 }
